# aw-watcher-screenshot

./: .gitignore  Cargo.toml  LICENSE  PROJECT_REVIEW.md  README.md  check_output.txt  config.toml.example  verify_db.rs
.github/workflows/: release.yml
crates/aw-client-lite/: Cargo.toml
crates/aw-client-lite/doc/: api.md  aw-client.rs  model.md
crates/aw-client-lite/src/: lib.rs
crates/aw-client-lite/tests/: client_test.rs
crates/aw-watcher-screenshot/: Cargo.toml  config.toml
crates/aw-watcher-screenshot/src/: config.rs  event.rs  main.rs  screenshot.rs  trigger.rs  worker.rs
crates/aw-watcher-screenshot/src/worker_impl/: awserver.rs  cache.rs  capture.rs  filter.rs  mod.rs  passthrough.rs  s3.rs
doc/: 存储架构.md  异步存储与上传.md
src/: config.rs  event.rs  main.rs  trigger.rs
src/capture/: capture.rs  event.rs  mod.rs  monitor.rs  utils.rs
src/storage/: cache.rs  local.rs  mod.rs  pack.rs  storage.rs
src/worker_impl/: awserver.rs  cache.rs  capture.rs  mod.rs  s3.rs  sqlite.rs
