[package]
name = "aw-watcher-screenshot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
directories = "6.0.0"
futures = "0.3.31"
image = "0.25.9"
imageproc = "0.25.0"
rust-s3 = "0.37.1"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
uuid = { version = "1.19.0", features = ["v4", "v7"] }
xcap = "0.8.0"
