[package]
name = "aw-watcher-screenshot"
version = "0.1.0"
edition = "2024"

[dependencies]
age = "0.11.2"
anyhow = "1.0.100"
bytes = "1.11.0"
chrono = "0.4.42"
crc32fast = "1.5.0"
directories = "6.0.0"
futures = "0.3.31"
image = "0.25.9"
imageproc = "0.25.0"
regex = "1.12.2"
rusqlite = { version = "0.38.0", features = ["bundled"] }
rust-s3 = "0.37.1"
serde = { version = "1.0.228", features = ["derive"] }
tar = "0.4.44"
tokio = { version = "1.48.0", features = ["full"] }
toml = "0.9.10"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
uuid = { version = "1.19.0", features = ["v4", "v7"] }
xcap = "0.8.0"
zstd = "0.13.3"
