[workspace]
resolver = "2"

members = [
    "crates/aw-watcher-screenshot",
    "crates/aw-client-lite"
]

[workspace.dependencies]
tokio = { version = "1.48.0", features = ["full"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.100"
tracing = "0.1.44"
chrono = "0.4.42"
aw-models = "0.1.0"
