[package]
name = "aw-watcher-screenshot"
version = "0.1.0"
edition = "2024"

[dependencies]
age = "0.11.2"
anyhow = { workspace = true }
bytes = "1.11.0"
chrono = { workspace = true }
crc32fast = "1.5.0"
directories = "6.0.0"
futures = "0.3.31"
image = "0.25.9"
imageproc = "0.25.0"
regex = "1.12.2"
rust-s3 = "0.37.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
tar = "0.4.44"
tokio = { workspace = true }
toml = "0.9.10"
clap = { version = "4.5", features = ["derive"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
uuid = { version = "1.19.0", features = ["v4", "v7"] }
xcap = "0.8.0"
webp = "0.3.1"
reqwest = { workspace = true }
hostname = "0.4"
aw-client-lite = { path = "../aw-client-lite" }
aw-models = { workspace = true }
