[package]
name = "aw-watcher-screenshot"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
async-trait = "0.1"
chrono = { workspace = true }
futures = "0.3.31"
image = "0.25.9"
regex = "1.12.2"
rust-s3 = "0.37.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
tokio = { workspace = true }
toml = "0.9.10"
clap = { version = "4.5", features = ["derive"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
xcap = "0.8.0"
webp = "0.3.1"
reqwest = { workspace = true }
hostname = "0.4"
aw-client-lite = { path = "../aw-client-lite" }
aw-models = { workspace = true }
tokio-util = "0.7.18"

